@@ -270,7 +270,7 @@ MagickExport MagickBooleanType AcquireMagickResource(const ResourceType type,
 %                                                                             %
 %                                                                             %
 %                                                                             %
-+   A s y n c h r o n o u s R e s o u r c e C o m p o n e n t T e r m i n u s %
+temporary_resource=DestroyString((char *) temporary_resource);
 %                                                                             %
 %                                                                             %
 %                                                                             %
@@ -332,6 +332,7 @@ MagickExport void AsynchronousResourceComponentTerminus(void)
 static void *DestroyTemporaryResources(void *temporary_resource)
 {
   (void) remove((char *) temporary_resource);
+  temporary_resource=DestroyString((char *) temporary_resource);
   return((void *) NULL);
 }
 
@@ -414,9 +415,6 @@ MagickExport int AcquireUniqueFileResource(char *path)
 # define TMP_MAX  238328
 #endif
 
-  char
-    *resource;
-
   int
     c,
     file;
@@ -479,8 +477,8 @@ MagickExport int AcquireUniqueFileResource(char *path)
     temporary_resources=NewSplayTree(CompareSplayTreeString,
       RelinquishMagickMemory,DestroyTemporaryResources);
   UnlockSemaphoreInfo(resource_semaphore);
-  resource=ConstantString(path);
-  (void) AddValueToSplayTree(temporary_resources,resource,resource);
+  (void) AddValueToSplayTree(temporary_resources,ConstantString(path),
+    ConstantString(path));
   return(file);
 }
 
